Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/arrays/MissingAnnotationValue.out
MissingAnnotationValue.java:12:12: compiler.err.annotation.missing.default.value: A, field
1 error
